<resources>
    <string name="app_name">Ticket Union</string>
    <string name="Item_navigation_home">首页</string>
    <string name="Item_navigation_choiceness">精选</string>
    <string name="Item_navigation_on_sell">特惠</string>
    <string name="Item_navigation_search">搜索</string>
    <string name="HomeFragment">首页</string>
    <string name="ChoicenessFragment">精选</string>
    <string name="OnSellFragment">特惠</string>
    <string name="SearchFragment">搜索</string>
    <string name="textSob">SOB</string>
    <string name="textSearch">搜索</string>
    <string name="QRCode">QR Code</string>
    <string name="textLoading">加载中……</string>
    <string name="textError">加载错误，请稍后重试</string>
    <string name="textItemTitle">TextItemTitle</string>s
    <string name="textItemLabel">textItemLabel</string>
    <string name="textItemPrice">textItemPrice</string>
    <string name="textItemCount">textItemCount</string>
    <string name="imageItemIcon">imageItemIcon</string>
    <string name="volumeCount">已售%s万</string>
    <string name="imageTaoCode">imageTaoCode</string>
    <string name="editTaoCode">￥3KsxcBhep8Q￥</string>
    <string name="buttonTaoCode">buttonTaoCode</string>
    <string name="textChoicenessCategory">textChoicenessCategory</string>
    <string name="textPrice">textPrice</string>
    <string name="textCheck">buy</string>
    <string name="textTitle">textTitle</string>
    <string name="imageIcon">imageIcon</string>
    <string name="buttonChoicenessBuy">原价%s元</string>
    <string name="textWarning">你来晚啦，已经领完了</string>
    <string name="textPreferential">textPreferential</string>
    <string name="textPreferentialPrompt">领券省%s</string>
    <string name="imageOnSellIcon">imageOnSellIcon</string>
    <string name="onSellPrice">￥%s  券后价:%s</string>
    <string name="editTextSearch">搜索</string>
    <string name="textSearchButton">取消</string>
    <string name="textSearchHistory">搜索历史</string>
    <string name="imageSearchHistory">搜索历史</string>
    <string name="textRecommended">热搜推荐</string>
    <string name="imageSearchIcon">搜索图标</string>
    <string name="textSearchTitle">搜索商品标题</string>
    <string name="textSearchPreferential">商品优惠</string>
    <string name="textSearchPrice">搜索价格</string>
</resources>