<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/choicenessFragment"
        android:name="zzz.bing.ticketunion.view.fragment.ChoicenessFragment"
        android:label="@string/ChoicenessFragment" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="zzz.bing.ticketunion.view.fragment.HomeFragment"
        android:label="@string/HomeFragment" />
    <fragment
        android:id="@+id/redPacketFragment"
        android:name="zzz.bing.ticketunion.view.fragment.RedPacketFragment"
        android:label="@string/RedPacketFragment" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="zzz.bing.ticketunion.view.fragment.SearchFragment"
        android:label="@string/SearchFragment" />
</navigation>