<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textItemLabel"
                app:layout_constraintBottom_toTopOf="@+id/textItemPrice"
                app:layout_constraintStart_toStartOf="@+id/guideline6" />

            <TextView
                android:id="@+id/textItemTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/textItemTitle"
                app:layout_constraintEnd_toEndOf="@+id/textItemCount"
                app:layout_constraintStart_toEndOf="@+id/imageItemIcon"
                app:layout_constraintTop_toTopOf="@+id/imageItemIcon"
                tools:text="12211" />

            <ImageView
                android:id="@+id/imageItemIcon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/imageItemIcon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toStartOf="@+id/textItemLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textItemCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textItemCount"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textItemPrice"
                app:layout_constraintBottom_toBottomOf="@+id/imageItemIcon"
                app:layout_constraintStart_toStartOf="@+id/textItemTitle" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>