<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageIcon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/imageIcon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/textTitle"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/imageIcon"
                app:layout_constraintTop_toBottomOf="@+id/imageIcon" />

            <Button
                android:id="@+id/textCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_item_label_background"
                android:padding="10dp"
                android:text="@string/textCheck"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageIcon"
                app:layout_constraintTop_toBottomOf="@+id/textTitle"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textPrice"
                android:textColor="@color/app_theme"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textCheck"
                app:layout_constraintTop_toTopOf="@+id/textCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>