<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageSearchIcon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/imageSearchIcon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline13"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_photo_placeholder" />

            <TextView
                android:id="@+id/textSearchTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/textSearchTitle"
                android:maxLines="3"
                app:layout_constraintBottom_toTopOf="@+id/textSearchPreferential"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline13"
                app:layout_constraintTop_toTopOf="@+id/imageSearchIcon"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textSearchPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textSearchPrice"
                app:layout_constraintBottom_toBottomOf="@+id/imageSearchIcon"
                app:layout_constraintEnd_toEndOf="@+id/textSearchPreferential"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textSearchTitle" />

            <TextView
                android:id="@+id/textSearchPreferential"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_item_label_background"
                android:padding="3dp"
                android:text="@string/textSearchPreferential"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/textSearchPrice"
                app:layout_constraintEnd_toEndOf="@+id/textSearchTitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textSearchTitle" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.34" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>