<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_theme"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_weight="8"
            android:autofillHints=""
            android:background="@drawable/shape_text_box_bg"
            android:ems="10"
            android:hint="@string/editTextSearch"
            android:imeOptions="actionSearch"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:maxLines="1"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/textSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/textSearchButton"
            android:textColor="@color/black" />
    </LinearLayout>

    <include
        android:id="@+id/includeLoading"
        layout="@layout/include_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="gone" />

    <include
        android:id="@+id/includeLoadError"
        layout="@layout/include_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/key"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintSearchHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textSearchHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textSearchHistory"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageSearchHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/imageSearchHistory"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_baseline_delete_forever_24" />

            <zzz.bing.ticketunion.customview.FlowText
                android:id="@+id/flowTextSearchHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="visible"
                app:flowTextSize="6sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSearchHistory"
                app:layout_constraintVertical_bias="1.0"
                app:maxLine="4"
                app:textBackground="@drawable/selector_flow_text"
                app:textMarginLeft="5dp"
                app:textMarginTop="5dp"
                app:textMaxLength="10"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="visible"
            tools:visibility="gone">

            <TextView
                android:id="@+id/textRecommended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textRecommended"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.050000012" />

            <zzz.bing.ticketunion.customview.FlowText
                android:id="@+id/flowTextRecommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="visible"
                app:flowTextSize="6sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRecommended"
                app:layout_constraintVertical_bias="1.0"
                app:maxLine="4"
                app:textBackground="@drawable/selector_flow_text"
                app:textMarginLeft="5dp"
                app:textMarginTop="5dp"
                app:textMaxLength="10"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>


</FrameLayout>